WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
271810
REGRESSION (
276714@main
): [ MacOS iOS Debug ] media/audio-remove-playback-crash.html is a consistent crash
https://bugs.webkit.org/show_bug.cgi?id=271810
Summary
REGRESSION (276714@main): [ MacOS iOS Debug ] media/audio-remove-playback-cra...
Jay Stfleur
Reported
2024-03-27 16:48:31 PDT
Description: media/audio-remove-playback-crash.html Is a consistent crash on Debug after
276714@main
History:
https://results.webkit.org/?suite=layout-tests&test=media%2Faudio-remove-playback-crash.html&style=debug
Diff/Image Diff/Crash Log: stderr: ASSERTION FAILED: !m_deletionHasBegun /Volumes/Data/worker/Apple-Sonoma-Debug-Build/build/WebKitBuild/Debug/usr/local/include/wtf/RefCounted.h(56) : void WTF::RefCountedBase::ref() const 1 0x1084e5e64 WTFCrash 2 0x1084e5e80 WTFIsDebuggerAttached 3 0x1196713b8 WTF::RefCountedBase::ref() const 4 0x117808b68 WTF::DefaultRefDerefTraits<WebCore::Page>::refIfNotNull(WebCore::Page*) 5 0x119d91394 WTF::RefPtr<WebCore::Page, WTF::RawPtrTraits<WebCore::Page>, WTF::DefaultRefDerefTraits<WebCore::Page>>::RefPtr(WebCore::Page*) 6 0x119c9091c WTF::RefPtr<WebCore::Page, WTF::RawPtrTraits<WebCore::Page>, WTF::DefaultRefDerefTraits<WebCore::Page>>::RefPtr(WebCore::Page*) 7 0x11aaaf244 WebCore::HTMLMediaElement::schedulePlaybackControlsManagerUpdate() 8 0x11aad0cd0 WebCore::HTMLMediaElement::stopWithoutDestroyingMediaPlayer() 9 0x11aad0f24 WebCore::HTMLMediaElement::stop() 10 0x11a729afc auto WebCore::ScriptExecutionContext::stopActiveDOMObjects()::$_9::operator()<WebCore::ActiveDOMObject>(WebCore::ActiveDOMObject&) const 11 0x11a729a9c WTF::Detail::CallableWrapper<WebCore::ScriptExecutionContext::stopActiveDOMObjects()::$_9, WebCore::ScriptExecutionContext::ShouldContinue, WebCore::ActiveDOMObject&>::call(WebCore::ActiveDOMObject&) 12 0x11a709210 WTF::Function<WebCore::ScriptExecutionContext::ShouldContinue (WebCore::ActiveDOMObject&)>::operator()(WebCore::ActiveDOMObject&) const 13 0x11a709070 WebCore::ScriptExecutionContext::forEachActiveDOMObject(WTF::Function<WebCore::ScriptExecutionContext::ShouldContinue (WebCore::ActiveDOMObject&)> const&) const 14 0x11a709928 WebCore::ScriptExecutionContext::stopActiveDOMObjects() 15 0x11a49c2d0 WebCore::Document::stopActiveDOMObjects() 16 0x11a49bd94 WebCore::Document::commonTeardown() 17 0x11a4ae474 WebCore::Document::willBeRemovedFromFrame() 18 0x11b4b28dc WebCore::LocalFrame::setView(WTF::RefPtr<WebCore::LocalFrameView, WTF::RawPtrTraits<WebCore::LocalFrameView>, WTF::DefaultRefDerefTraits<WebCore::LocalFrameView>>&&) 19 0x11b549aac WebCore::Page::~Page() 20 0x11b54aef0 WebCore::Page::~Page() 21 0x117806154 std::__1::default_delete<WebCore::Page>::operator()[abi:sn170006](WebCore::Page*) const 22 0x117806110 WTF::RefCounted<WebCore::Page, std::__1::default_delete<WebCore::Page>>::deref() const 23 0x1178060d0 WTF::DefaultRefDerefTraits<WebCore::Page>::derefIfNotNull(WebCore::Page*) 24 0x11aedbbdc WTF::Ref<WebCore::Page, WTF::RawPtrTraits<WebCore::Page>, WTF::DefaultRefDerefTraits<WebCore::Page>>::~Ref() 25 0x117805dd4 WTF::Ref<WebCore::Page, WTF::RawPtrTraits<WebCore::Page>, WTF::DefaultRefDerefTraits<WebCore::Page>>::~Ref() 26 0x11a8c0de4 WebCore::ReplacementFragment::ReplacementFragment(WTF::RefPtr<WebCore::DocumentFragment, WTF::RawPtrTraits<WebCore::DocumentFragment>, WTF::DefaultRefDerefTraits<WebCore::DocumentFragment>>&&, WebCore::VisibleSelection const&) 27 0x11a8c19bc WebCore::ReplacementFragment::ReplacementFragment(WTF::RefPtr<WebCore::DocumentFragment, WTF::RawPtrTraits<WebCore::DocumentFragment>, WTF::DefaultRefDerefTraits<WebCore::DocumentFragment>>&&, WebCore::VisibleSelection const&) 28 0x11a8cfef4 std::__1::__unique_if<WebCore::ReplacementFragment>::__unique_single std::__1::make_unique[abi:sn170006]<WebCore::ReplacementFragment, WTF::RefPtr<WebCore::DocumentFragment, WTF::RawPtrTraits<WebCore::DocumentFragment>, WTF::DefaultRefDerefTraits<WebCore::DocumentFragment>>, WebCore::VisibleSelection const&>(WTF::RefPtr<WebCore::DocumentFragment, WTF::RawPtrTraits<WebCore::DocumentFragment>, WTF::DefaultRefDerefTraits<WebCore::DocumentFragment>>&&, WebCore::VisibleSelection const&) 29 0x11a8cb730 decltype(auto) WTF::makeUnique<WebCore::ReplacementFragment, WTF::RefPtr<WebCore::DocumentFragment, WTF::RawPtrTraits<WebCore::DocumentFragment>, WTF::DefaultRefDerefTraits<WebCore::DocumentFragment>>, WebCore::VisibleSelection const&>(WTF::RefPtr<WebCore::DocumentFragment, WTF::RawPtrTraits<WebCore::DocumentFragment>, WTF::DefaultRefDerefTraits<WebCore::DocumentFragment>>&&, WebCore::VisibleSelection const&) 30 0x11a8c5e30 WebCore::ReplaceSelectionCommand::ensureReplacementFragment() 31 0x11a8c5d74 WebCore::ReplaceSelectionCommand::willApplyCommand() com.apple.WebKit.WebContent.Development terminated (pid 12238) for reason: crash LEAK: 1 WebPageProxy
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-03-27 16:48:52 PDT
<
rdar://problem/125517208
>
Chris Dumez
Comment 2
2024-03-27 20:20:35 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/26547
EWS
Comment 3
2024-03-27 22:07:04 PDT
Committed
276768@main
(5053e88ee8f8): <
https://commits.webkit.org/276768@main
> Reviewed commits have been landed. Closing PR #26547 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug