REGRESSION (276714@main): [ MacOS iOS Debug ] media/audio-remove-playback-crash.html is a consistent crash https://bugs.webkit.org/show_bug.cgi?id=271810 rdar://125517208

Reviewed by Ryosuke Niwa.

Use RefPtrAllowingPartiallyDestroyed instead of RefPtr as the Page may have
started destruction, based on the crash trace.

* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::schedulePlaybackControlsManagerUpdate):

Canonical link: https://commits.webkit.org/276768@main